--- a/CSS/index.css
+++ b/CSS/index.css
@@ -189,13 +189,13 @@ h1{
 
     .menu-nav{
         width: 100%;
-        padding: 2rem 0;
+        padding: .1rem 0;
     }
 
     .menu-list{
         flex-direction: column;
         align-items: center;
-        gap: 2.8rem;
+        gap: 1.6rem;
     }
 
     .logo{
