--- a/CSS/sobre.css
+++ b/CSS/sobre.css
@@ -106,10 +106,13 @@ body{
 .dani-container {
     display: flex; 
     flex-wrap: wrap; 
+    gap: 5rem;
     justify-content: center;
     align-items: center;
-    gap: 10rem;
-    margin: 4rem 0 3rem; 
+}
+
+.secao-dani{
+    margin-bottom: 5rem;
 }
 
 .dani-img {
@@ -121,6 +124,7 @@ body{
     opacity: 0;
     transition: transform .7s ease-out, opacity .7s ease-out;
 }
+
 .apresentacao-dani{
     max-width: 50%;
     text-align: justify;
@@ -128,6 +132,7 @@ body{
     opacity: 0;
     transition: transform 1.3s ease-out, opacity 1.3s ease-out;
 }
+
 
 .scrollRight{
     transform: translateX(0);
@@ -142,10 +147,10 @@ body{
 .samira-container{
     display: flex;
     flex-wrap: wrap;
+    gap: 5rem;
     justify-content: center;
     align-items: center;
-    gap: 10rem;
-    margin: 20rem 0 5rem; 
+    
 }
 
 .samira-img{
@@ -183,6 +188,7 @@ body{
     font-size: 1.6rem;
     text-align: center;
     padding: 1rem;
+    margin-top: 5rem;
 }
 
 
@@ -215,9 +221,9 @@ body{
     }
 
     .main-text{
-        margin: auto;
         padding: 0;
         width: 90%;
+        margin-bottom: 3rem;
     }
 
     .history-title{
@@ -225,23 +231,12 @@ body{
 
     }
 
-    .secao-dani{
-        padding: 0;
-        margin: 0;
-    }
-
-    .dani-container{
-        margin: 0
-    }
-
-    .apresentacao-dani{
+    .apresentacao-dani, .apresentacao-samira{
+        width: 90%;
+        max-width: 90%;
         margin: auto;
-        width: 100%;
     
     }
-
-
-
 }
 
 
